--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
     "express": "^4.16.2",
     "http": "0.0.0",
     "socket.io": "^2.0.4"
+  },
+  "engines": {
+      "node": "8.9.4",
+      "npm" : "5.6.0"
   }
 }
