--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,10 +13,12 @@ phases:
         commands:
             - npm install
             - npm ci
+            - cd ..
+            - tar pczf snake-test-staging.tar.gz snake-multiplayer
     post_build:
         commands:
             # Create the staging and production bundles for node server
             - echo `date` - Build completed!
 artifacts:
   files:
-    - '**/*'
+    - snake-test-*.tar.gz
